[package]
name = "paraxis"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A maths library for doing calculations on spatial data."
version = "0.2.0"
edition = "2024"
keywords = ["maths", "gpu", "vectorization", "linear-algebra", "numpy"]
categories = ["mathematics"]
license = "MIT"
repository = "https://github.com/glennw-mt/paraxis"

[dependencies]
crossbeam = "0.8.4"
glam = "0.30.9"
