[package]
name = "paraxis"
authors = ["Glenn Wallace glennw-coding@proton.me"]
description = "A maths library for doing calculations on spatial data."
version = "0.2.5"
edition = "2024"
keywords = ["maths", "gpu", "vectorization", "linear-algebra", "numpy"]
categories = ["mathematics"]
license = "MIT"
repository = "https://github.com/glennw-mt/paraxis"

[dependencies]
glam = "0.30.9"
macroquad = "0.4.14"
rayon = "1.11.0"
